Fix wrong color output for post links, and update masthead

--- a/_scss/_colors.scss
+++ b/_scss/_colors.scss
@@ -77,7 +77,7 @@ article header {
 
 h2 {
 	a {
-		&:active.post, &:visited.post {
+		&.post, &:active.post, &:visited.post {
 			color: $text-01;
 		}
 
